Update blog layout: remove avatar, fix navigation alignment, adjust styling

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ img {
 }
 
 .masthead {
-  padding: 20px 0;
+  padding: 0px 0;
   border-bottom: 1px solid $lightGray;
 
   @include mobile {
@@ -185,8 +185,6 @@ img {
   justify-content: space-between;
   align-items: flex-start;
   border-bottom: 1px solid #ddd;
-  padding-bottom: 15px;
-  margin-bottom: 20px;
   width: 100%;
 }
 
